Allowing robots.txt to be accessed by web

--- a/.htaccess
+++ b/.htaccess
@@ -4,11 +4,12 @@
 	RewriteCond %{REQUEST_FILENAME} !-d
 
 	RewriteRule ^sync resources/helpers/sync-with-foursquare.php [L]
+
+	RewriteRule ^robots.txt robots.txt [L]
 	
 	RewriteRule ^(.*)/(.*)/(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3&category3=$4&category4=$5 [QSA]
 	RewriteRule ^(.*)/(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3&category3=$4 [QSA]
 	RewriteRule ^(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3 [QSA]
 	RewriteRule ^(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2 [QSA]
 	RewriteRule ^(.*) resources/helpers/router.php?list=$1 [QSA]
-
 </IfModule>
