--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
+Options -Indexes
+
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+	RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] 
+	
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 
