--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@ Options -Indexes
 
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+	RewriteCond %{HTTPS} !=on
 	RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] 
 	
 	RewriteCond %{REQUEST_FILENAME} !-f
