--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ Options -Indexes
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	RewriteCond %{HTTPS} !=on
+	RewriteCond %{HTTP_HOST} !=localhost
 	RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] 
 	
 	RewriteCond %{REQUEST_FILENAME} !-f
