Testing curling the google static map instead of linking directly for OG image share

--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ Options -Indexes
 	RewriteCond %{REQUEST_FILENAME} !-d
 
 	RewriteRule ^sync resources/helpers/sync-with-foursquare.php [L]
+	RewriteRule ^google_static_map/(.*)/(.*) resources/helpers/google-static-map.php?center=$1&zoom=$2 [L]
 
 	RewriteRule ^robots.txt robots.txt [L]
 	
@@ -17,5 +18,5 @@ Options -Indexes
 	RewriteRule ^(.*)/(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3&category3=$4 [QSA]
 	RewriteRule ^(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3 [QSA]
 	RewriteRule ^(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2 [QSA]
-	RewriteRule ^(.*) resources/helpers/router.php?list=$1 [QSA]
+	RewriteRule ^(.*) resources/helpers/router.php?list=$1 [QSA]	
 </IfModule>
