Making manifest.json accessible via URL

--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,7 @@ Options -Indexes
 	RewriteRule ^google_static_map/(.*)/(.*) resources/helpers/google-static-map.php?center=$1&zoom=$2 [L]
 
 	RewriteRule ^robots.txt robots.txt [L]
+	RewriteRule ^manifest.json manifest.json [L]
 	
 	RewriteRule ^(.*)/(.*)/(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3&category3=$4&category4=$5 [QSA]
 	RewriteRule ^(.*)/(.*)/(.*)/(.*) resources/helpers/router.php?list=$1&category1=$2&category2=$3&category3=$4 [QSA]
